# botElectrico

./: .gitignore  README.md  botElectrico.py  botElectrico.py.bak  botElectricoGem.py  botElectricoGraphGem.py  botElectrico_comparison_summary.txt  config.py  data.json  data_handler.py  price_calculator.py  pyproject.toml  social_media.py  visualizer.py
.github/workflows/: scrape.yml
docs/: CNAME  Gemfile  _config.yml  about.markdown  index.html  index.markdown
docs/_includes/: custom-head.html  footer.html  header.html  social.html  svg-icons.html
docs/_includes/svg-icons/: bluesky.html  mastodon.html  telegram.html  x.html
docs/_layouts/: home.html
docs/_news/: 2025-04-13-nuevoLimite.md
docs/_posts/: 2023-05-15-evolucion-dia.md  2023-05-16-evolucion-dia.md  2023-06-01-post.md  2023-06-03-welcome-to-jekyll.markdown  2023-06-03.md  2023-06-04-evolucion-dia.md  2023-06-04-post.md  2023-06-05-post.md  2023-06-06-post.md  2023-06-07-post.md  2023-06-08-post.md  2023-06-09-post.md  2023-06-11-post.md  2023-06-12-post.md  2023-06-13-post.md  2023-06-14-post.md  2023-06-15-post.md  2023-06-16-post.md  2023-06-17-post.md  2023-06-18-post.md  2023-06-19-post.md  2023-06-20-post.md  2023-06-21-post.md  2023-06-22-post.md  2023-06-23-post.md  2023-06-24-post.md  2023-06-25-post.md  2023-06-26-post.md  2023-06-27-post.md  2023-06-28-post.md  2023-06-29-post.md  2023-06-30-post.md  2023-07-01-post.md  2023-07-02-post.md  2023-07-03-post.md  2023-07-04-post.md  2023-07-05-post.md  2023-07-06-post.md  2023-07-07-post.md  2023-07-08-post.md  (+842 more)
docs/_site/: 404.html  feed.xml  index.html
docs/_site/about/: index.html
docs/_site/page10/: index.html
docs/_site/page11/: index.html
docs/_site/page12/: index.html
docs/_site/page13/: index.html
docs/_site/page14/: index.html
docs/_site/page15/: index.html
docs/_site/page16/: index.html
docs/_site/page17/: index.html
docs/_site/page18/: index.html
docs/_site/page19/: index.html
docs/_site/page2/: index.html
docs/_site/page20/: index.html
docs/_site/page3/: index.html
docs/assets/: minima-social-icons.liquid
(+577 files in other folders)
