[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "botElectrico"
version = "1.0.0"
description = "A bot that fetches Spanish electricity prices and posts updates to social media"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Fernando", email = "fernand0@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["electricity", "prices", "spain", "social-media", "automation"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "matplotlib>=3.3.0",
    "pandas>=1.2.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
    "pytest-cov",
]
social = [
    "social-modules @ git+https://github.com/fernand0/socialModules.git"
]
all = [
    "botElectrico[social,dev]",
]

[project.urls]
Homepage = "https://github.com/fernand0/botElectrico"
Repository = "https://github.com/fernand0/botElectrico.git"
"Bug Tracker" = "https://github.com/fernand0/botElectrico/issues"

[project.scripts]
botElectrico = "botElectrico:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["botElectrico*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["botElectrico"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/env/*",
    ".tox/*"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true